style.css
html {
    scroll-behavior: smooth;
  }

.container-fluid {
    padding: 0;
}

body {
    background-color: #FFE4C4;
}

/* img {
    width: 100px;
    margin: 10px;
} */

.pink {
    background-color: #FFF1E1;
}

.krem {
    background-color: #FFE4C4;
}

.video {
    max-width: 640px;
    max-height: 480px;
}

.content {
    padding-top: 55px;
}

.pesan {
    margin-top: 2rem;
    max-height: 25rem;
    overflow-y: scroll;
}

.card {
    background-color: #FFE4C4;
    margin-bottom: 1rem;
}

nav {
    position: fixed;
    background-color: #FFF1E1;
}

.midd {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    overflow-y: auto;
}

.scrollable {
    min-height: 95vh; /* or any value */
    background-color: #FFF1E1;
    margin-bottom: 25px;
    align-items: flex-start !important;
    /* text-align: center;
    // display: flex;
    // justify-content: center;
    // flex-direction: column;
    //overflow-y: auto; */
}

.landing {
    min-height: 95vh; /* or any value */
    background-color: #FFF1E1;
    background-image: url("static/img/prewed/HWS01596-min.JPG");
    background-position: center; /* Center the image */
    background-repeat: no-repeat; /* Do not repeat the image */
    background-size: cover; /* Resize the background image to cover the entire container */
    font-family: fantasy;
    margin-bottom: 1rem;
}

.header-text {
    margin-top: 10rem;
}

.scrollable-half {
    min-height: 45vh; /* or any value */
    background-color: #FFF1E1;
    margin-bottom: 25px;
    border-radius: 2rem;
    align-items: flex-start !important;
    /* text-align: center;
    // display: flex;
    // justify-content: center;
    // flex-direction: column;
    //overflow-y: auto; */
}

/* .container {
//     width: 100%;
//     margin: 0;
//     padding: 0;
// } */

.carousel {
    width: 80%;
}

